--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,3 @@
-# File created using '.gitignore Generator' for Visual Studio Code: https://bit.ly/vscode-gig
-
-# Created by https://www.gitignore.io/api/linux,visualstudiocode,go
-# Edit at https://www.gitignore.io/?templates=linux,visualstudiocode,go
-
-### Go ###
 # Binaries for programs and plugins
 *.exe
 *.exe~
@@ -11,17 +5,12 @@
 *.so
 *.dylib
 
-# Test binary, built with `go test -c`
+# Test binary, build with `go test -c`
 *.test
 
 # Output of the go coverage tool, specifically when used with LiteIDE
 *.out
 
-### Go Patch ###
-/vendor/
-/Godeps/
-
-### Linux ###
 *~
 
 # temporary files which can be created if a process still has a handle open of a deleted file
@@ -36,18 +25,4 @@
 # .nfs files are created when an open file is removed but is still being accessed
 .nfs*
 
-### VisualStudioCode ###
-.vscode/*
-!.vscode/settings.json
-!.vscode/tasks.json
-!.vscode/launch.json
-!.vscode/extensions.json
-
-### VisualStudioCode Patch ###
-# Ignore all local history of files
-.history
-
-# End of https://www.gitignore.io/api/linux,visualstudiocode,go
-
-# Custom rules (everything added below won't be overriden by 'Generate .gitignore File' if you use 'Update' option)
-
+.env
