--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,21 @@
 # File created using '.gitignore Generator' for Visual Studio Code: https://bit.ly/vscode-gig
 
-# Created by https://www.gitignore.io/api/sonarqube
-# Edit at https://www.gitignore.io/?templates=sonarqube
+# Created by https://www.gitignore.io/api/sonarqube,go
+# Edit at https://www.gitignore.io/?templates=sonarqube,go
+
+### Go ###
+# Binaries for programs and plugins
+*.exe
+*.exe~
+*.dll
+*.so
+*.dylib
+
+# Test binary, built with `go test -c`
+*.test
+
+# Output of the go coverage tool, specifically when used with LiteIDE
+*.out
 
 ### SonarQube ###
 # SonarQube ignore files.
@@ -15,7 +29,7 @@
 # SonarLint working directories, configuration files (including credentials)
 .sonarlint/
 
-# End of https://www.gitignore.io/api/sonarqube
+# End of https://www.gitignore.io/api/sonarqube,go
 
 # Custom rules (everything added below won't be overriden by 'Generate .gitignore File' if you use 'Update' option)
 
